Added 1 req reading W1, switched 1 from req to bac W4

--- a/LIS501Readings.html
+++ b/LIS501Readings.html
@@ -12,13 +12,13 @@
 <div id="header">
 <h1 class="title">Information Organization and Access</h1>
 <h2 class="author">University of Illinois School of Information Sciences</h2>
-<h3 class="date">Thu, Aug 4, 2016 10:06:00 AM</h3>
+<h3 class="date">Sun, Aug 7, 2016 3:15:22 PM</h3>
 </div>
 <h1 id="topic-schedule">Topic Schedule</h1>
 <p>Week 1, August 23: LIS Education and professional life</p>
 <ul>
 <li>Background: <span class="citation">(Glushko <a href="#ref-glushko_foundation_2015">2015</a><a href="#ref-glushko_foundation_2015">c</a>)</span>, <span class="citation">(Wright <a href="#ref-wright_secret_2014">2014</a><a href="#ref-wright_secret_2014">b</a>)</span>, <span class="citation">(Wright <a href="#ref-wright_cataloging_2014">2014</a><a href="#ref-wright_cataloging_2014">a</a>)</span>, <span class="citation">(Levie and Sofidoc Productions. <a href="#ref-levie_man_2004">2004</a>)</span>.</li>
-<li>Required: <span class="citation">(Lavoie, Dempsey, and Connaway <a href="#ref-lavoie_making_2006">2006</a>)</span>, <span class="citation">(Dyson <a href="#ref-dyson_how_2011">2011</a>)</span>, <span class="citation">(Bush <a href="#ref-bush_as_1945">1945</a>)</span>, <span class="citation">(Buckland <a href="#ref-buckland_what_1997">1997</a>)</span>, <span class="citation">(Bates <a href="#ref-bates_invisible_1999">1999</a>)</span>.</li>
+<li>Required: <span class="citation">(Ferraris <a href="#ref-ferraris_social_2011">2011</a>)</span>, <span class="citation">(Lavoie, Dempsey, and Connaway <a href="#ref-lavoie_making_2006">2006</a>)</span>, <span class="citation">(Dyson <a href="#ref-dyson_how_2011">2011</a>)</span>, <span class="citation">(Bush <a href="#ref-bush_as_1945">1945</a>)</span>, <span class="citation">(Buckland <a href="#ref-buckland_what_1997">1997</a>)</span>, <span class="citation">(Bates <a href="#ref-bates_invisible_1999">1999</a>)</span>.</li>
 </ul>
 <p>Week 2, August 30: Users and information needs</p>
 <ul>
@@ -32,8 +32,8 @@
 </ul>
 <p>Week 4, September 13: Structures and Standards</p>
 <ul>
-<li>Background: <span class="citation">(Glushko <a href="#ref-glushko_describing_2015">2015</a><a href="#ref-glushko_describing_2015">b</a>)</span>.</li>
-<li>Required: <span class="citation">(Vogt <a href="#ref-vogt_escience_2013">2013</a>)</span>, <span class="citation">(DeRose <a href="#ref-derose_what_2014">2014</a>)</span>, <span class="citation">(Bettels and Bishop <a href="#ref-bettels_unicode:_1993">1993</a>)</span>, <span class="citation">(Coombs, Renear, and DeRose <a href="#ref-coombs_markup_1987">1987</a>)</span>.</li>
+<li>Background: <span class="citation">(Glushko <a href="#ref-glushko_describing_2015">2015</a><a href="#ref-glushko_describing_2015">b</a>)</span>, <span class="citation">(Bettels and Bishop <a href="#ref-bettels_unicode:_1993">1993</a>)</span>.</li>
+<li>Required: <span class="citation">(Vogt <a href="#ref-vogt_escience_2013">2013</a>)</span>, <span class="citation">(DeRose <a href="#ref-derose_what_2014">2014</a>)</span>, <span class="citation">(Coombs, Renear, and DeRose <a href="#ref-coombs_markup_1987">1987</a>)</span>.</li>
 </ul>
 <p>Week 5, September 20: Approaches to organizing information</p>
 <ul>
@@ -141,6 +141,9 @@
 </div>
 <div id="ref-dyson_how_2011">
 <p>Dyson, Freeman. 2011. “How We Know.” <em>The New York Review of Books</em>, March. <a href="http://www.nybooks.com/articles/archives/2011/mar/10/how-we-know/" class="uri">http://www.nybooks.com/articles/archives/2011/mar/10/how-we-know/</a>.</p>
+</div>
+<div id="ref-ferraris_social_2011">
+<p>Ferraris, Maurizio. 2011. “Social Ontology and Documentality.” In <em>Approaches to Legal Ontologies: Theories, Domains, Methodologies</em>, edited by Giovanni Sartor, Pompeu Casanovas, Mariangela Biasiotti, and Meritxell Fernández-Barrera, 1:83–97. Law, Governance and Technology Series. Dordrecht: Springer Netherlands. <a href="http://dx.doi.org/10.1007/978-94-007-0120-5_5" class="uri">http://dx.doi.org/10.1007/978-94-007-0120-5_5</a>.</p>
 </div>
 <div id="ref-fidel_are_2008">
 <p>Fidel, Raya. 2008. “Are We There yet?: Mixed Methods Research in Library and Information Science.” <em>Library &amp; Information Science Research</em> 30 (4): 265–72. doi:<a href="https://doi.org/10.1016/j.lisr.2008.04.001">10.1016/j.lisr.2008.04.001</a>.</p>
