--- a/SecAFall16.html
+++ b/SecAFall16.html
@@ -7,12 +7,13 @@
   <meta name="author" content="University of Illinois School of Information Sciences" />
   <title>Information Organization and Access</title>
   <style type="text/css">code{white-space: pre;}</style>
+  <link rel="stylesheet" href="https://www.w3.org/StyleSheets/Core/Swiss" type="text/css" />
 </head>
 <body>
 <div id="header">
 <h1 class="title">Information Organization and Access</h1>
 <h2 class="author">University of Illinois School of Information Sciences</h2>
-<h3 class="date">Sat, Aug 13, 2016 9:04:10 PM</h3>
+<h3 class="date">Sun, Aug 14, 2016 11:25:28 AM</h3>
 </div>
 <p>LIS 501A<br />
 Fall 2016<br />
