Test for bib files

--- a/SecAFall16.html
+++ b/SecAFall16.html
@@ -13,7 +13,7 @@
 <div id="header">
 <h1 class="title">Information Organization and Access</h1>
 <h2 class="author">University of Illinois School of Information Sciences</h2>
-<h3 class="date">Sat, Aug 20, 2016 11:00:40 AM</h3>
+<h3 class="date">Mon, Aug 22, 2016 9:38:32 AM</h3>
 </div>
 <p>LIS 501A<br />
 Fall 2016<br />
@@ -97,7 +97,7 @@ Phone: (217) 333-3804</p>
 <p>Week 3, September 6: Research Methods</p>
 <ul>
 <li>Background: <span class="citation">(Connaway and Powell <a href="#ref-connaway_basic_2010">2010</a><a href="#ref-connaway_basic_2010">a</a>)</span>, <span class="citation">(Walliman <a href="#ref-walliman_defining_2006">2006</a>)</span>, <span class="citation">(Fidel <a href="#ref-fidel_are_2008">2008</a>)</span>, <span class="citation">(Sutton <a href="#ref-sutton_qualitative_2009">2009</a>)</span>, <span class="citation">(Sandstrom and Sandstrom <a href="#ref-sandstrom_use_1995">1995</a>)</span>, <span class="citation">(Connaway and Powell <a href="#ref-connaway_selecting_2010">2010</a><a href="#ref-connaway_selecting_2010">b</a>)</span>.</li>
-<li>Required: <span class="citation">(Aufderheide <a href="#ref-aufderheide_does_2016">2016</a>)</span>, <span class="citation">(Shachaf and Horowitz <a href="#ref-shachaf_are_2006">2006</a>)</span>, <span class="citation">(Whitmire <a href="#ref-whitmire_racial_1999">1999</a>)</span>.</li>
+<li>Required: <span class="citation">(Aufderheide <a href="#ref-aufderheide_does_2016">2016</a>)</span>, <span class="citation">(Shachaf and Horowitz <a href="#ref-shachaf_are_2006">2006</a>)</span>, <span class="citation">(Whitmire <a href="#ref-whitmire_racial_1999">1999</a>)</span>, <span class="citation">(Connaway and Powell <a href="#ref-connaway_selecting_2010">2010</a><a href="#ref-connaway_selecting_2010">b</a>)</span>.</li>
 </ul>
 <p>Week 4, September 13: Structures and Standards</p>
 <ul>
@@ -218,7 +218,7 @@ Phone: (217) 333-3804</p>
 <h2 id="before-you-begin" class="prereq">Before you begin</h2>
 <p>Read the required assigned readings for our collections topic before starting this assignment. The background readings will also make your task easier.</p>
 <h2 id="rationale-1" class="context">Rationale</h2>
-<p>The reading and discussion topic for week 5 is the nature of collections, challenges we face in making their contents accessible, and ways in which perspectives of librarians, archivists, and information scientists contribute to meeting those challenges. In bringing a critical, reviewer's attention to an existing digital collection, those issues will become more vivid and understandable to you.</p>
+<p>The reading and discussion topic for week 6 is the nature of collections, challenges we face in making their contents accessible, and ways in which perspectives of librarians, archivists, and information scientists contribute to meeting those challenges. In bringing a critical, reviewer's attention to an existing digital collection, those issues will become more vivid and understandable to you.</p>
 <h2 id="tasks-1" class="steps">Tasks</h2>
 <ol style="list-style-type: decimal">
 <li>Pick a topic of interest to you; perhaps something related to your final project.</li>
@@ -247,11 +247,11 @@ Phone: (217) 333-3804</p>
 <h2 id="resources" class="section">Resources</h2>
 <p>These resources may be useful for completing this assignment.</p>
 <ul>
-<li>Required readings for the Collections topic:
+<li>Required readings for Week 6, the Collections topic:
 <ul>
 <li><a href="https://www.zotero.org/groups/lis501/items/collectionKey/IND4XSQX" class="uri">https://www.zotero.org/groups/lis501/items/collectionKey/IND4XSQX</a></li>
 </ul></li>
-<li>Background readings for the Collections topic:
+<li>Background readings for Week 6, the Collections topic:
 <ul>
 <li><a href="https://www.zotero.org/groups/lis501/items/collectionKey/Z8V7XKUD" class="uri">https://www.zotero.org/groups/lis501/items/collectionKey/Z8V7XKUD</a><br />
 </li>
@@ -261,7 +261,7 @@ Phone: (217) 333-3804</p>
 <li><a href="http://dp.la/exhibitions" class="uri">http://dp.la/exhibitions</a></li>
 <li><a href="http://tinyurl.com/DPLAguidelines" class="uri">http://tinyurl.com/DPLAguidelines</a></li>
 </ul></li>
-<li>FLICKR galleries
+<li>Flickr galleries
 <ul>
 <li><a href="https://www.flickr.com/photos/flickr/galleries" class="uri">https://www.flickr.com/photos/flickr/galleries</a></li>
 <li><a href="https://www.flickr.com/help/galleries/" class="uri">https://www.flickr.com/help/galleries/</a></li>
@@ -291,39 +291,54 @@ Phone: (217) 333-3804</p>
 </ul>
 <h2 id="milestone-deliverables" class="steps">Milestone Deliverables</h2>
 <ol style="list-style-type: decimal">
-<li>Research Question due September 8, to be posted to the class discussion forum designated by your instructor
+<li><strong>Research Question due September 8</strong>, to be posted to the class discussion forum designated by your instructor
 <ul>
 <li>Pose a research question. Your post should be a sentence or two (no more than a paragraph). Also provide feedback and suggestions to your classmates by replying to their posts.</li>
 </ul></li>
-<li>Research Methods due September 22, to be posted to the class discussion forum designated by your instructor
+<li><strong>Research Methods due September 22</strong>, to be posted to the class discussion forum designated by your instructor
 <ul>
 <li>Devise methods for addressing your research question and write a one paragraph description of an approach that you feel would be appropriate for investigating the question. Draw on and connect this to research methods discussed in class. Post no more than two paragraphs (research question paragraph, revised from LABDATE3 + new paragraph on research methods). Also provide feedback and suggestions to your classmates by replying to their posts.</li>
 </ul></li>
-<li>Resource List due October 6, to the class discussion forum designated by your instructor
+<li><strong>Resource List due October 6</strong>, to the class discussion forum designated by your instructor
 <ul>
 <li>Use Zotero to share 20 resources related to your research question and/or method. Your post should include a link to Zotero's RSS feed for the collection and 1-2 sentences. This could cover either how you found resources, types of items you are still looking for, or a very brief commentary about a resource you found interesting. Also provide feedback and suggestions to your classmates by replying to their posts.</li>
 </ul></li>
 </ol>
 <h2 id="final-deliverables" class="result">Final Deliverables</h2>
-<dl>
+<ol style="list-style-type: decimal">
+<li><dl>
 <dt>Due October 27 Two page extended abstract</dt>
 <dd>Develop the two paragraph summary of your research question into a two page extended abstract. Focus on describing and justifying the methods for investigating your research question. The extended abstract is a proposal. It should include a statement of your research problem, a description of research methods for investigating the problem, and an explanation of what form the results of the investigation will take.
 </dd>
+</dl></li>
+<li><dl>
 <dt>Due October 27 Annotated bibliography of 20 items</dt>
 <dd>Following the Purdue Writing Lab Guidelines, create a document that integrates annotations with formatted entries. For each resource, write an annotation that situates the work presented with respect to your research question. Overall, the annotated bibliography should connect your problem to what is already known. It should have a meaningful order (which might be alphabetical, chronological, or something else). The resource list previously submitted may need to be modified, either removing or adding items as necessary to cover as many aspects of the problem, and the knowledge gap, as feasible. Your annotations should draw your reader's attention to the connections between the resource and your problem, and to other resources in the bibliography.
 </dd>
+</dl></li>
+<li><dl>
 <dt>Due October 27 Five minute oral presentation</dt>
 <dd>Use this presentation to efficiently summarize the relevance of this problem to people and organizations who have a stake in resolving the knowledge gap that you have identified. Do explain the general approach to investigating the question, but save methodological details for the extended abstract. Five minute summaries are difficult, so practice your presentation with a classmate or colleague outside class.
 </dd>
-</dl>
+</dl></li>
+</ol>
 <h3 id="submitting-final-deliverables" class="postreq">Submitting Final Deliverables</h3>
 <p>Upload the extended abstract and annotated bibliography files to the Moodle drop box associated with this exercise.</p>
 <p>Present your project during one of the last two class meetings.</p>
 <h2 id="resources-1" class="section">Resources</h2>
 <ul>
-<li><a href="http://methods.sagepub.com/book/social-research-methods/n6.xml">Walliman on defining the research problem</a></li>
-<li><a href="https://owl.english.purdue.edu/owl/resource/614/01/">Purdue University resources on annotated bibliographies</a></li>
-<li><a href="https://www.zotero.org/groups/lis501/items/collectionKey/7TJ9WWEE">Background readings on research methods</a></li>
+<li>Walliman on defining the research problem
+<ul>
+<li><a href="http://methods.sagepub.com/book/social-research-methods/n6.xml" class="uri">http://methods.sagepub.com/book/social-research-methods/n6.xml</a></li>
+</ul></li>
+<li>Purdue University resources on annotated bibliographies
+<ul>
+<li><a href="https://owl.english.purdue.edu/owl/resource/614/01/" class="uri">https://owl.english.purdue.edu/owl/resource/614/01/</a></li>
+</ul></li>
+<li>Background readings on research methods from week 3
+<ul>
+<li><a href="https://www.zotero.org/groups/lis501/items/collectionKey/7TJ9WWEE" class="uri">https://www.zotero.org/groups/lis501/items/collectionKey/7TJ9WWEE</a></li>
+</ul></li>
 </ul>
 <h1 id="readings" class="unnumbered">Readings</h1>
 <div id="refs" class="references">
@@ -349,7 +364,7 @@ Phone: (217) 333-3804</p>
 <p>———. 2007. “What Is Browsing—really? A Model Drawing from Behavioural Science Research.” <em>Information Research</em> 12 (4). <a href="http://www.informationr.net/ir/12-4/paper330.html" class="uri">http://www.informationr.net/ir/12-4/paper330.html</a>.</p>
 </div>
 <div id="ref-bates_information_2009">
-<p>———. 2009. “Information Behavior.” In <em>Encyclopedia of Library and Information Sciences, Third Edition</em>, null:2381–91. null. Taylor &amp; Francis. <a href="http://www.tandfonline.com/doi/full/10.1081/E-ELIS3-120043263" class="uri">http://www.tandfonline.com/doi/full/10.1081/E-ELIS3-120043263</a>.</p>
+<p>———. 2009. “Information Behavior.” In <em>Encyclopedia of Library and Information Sciences, Third Edition</em>, null:2381–91. null. Taylor &amp; Francis.</p>
 </div>
 <div id="ref-bawden_encountering_2011">
 <p>Bawden, David. 2011. “Encountering on the Road to Serendip? Browsing in New Information Environments.” In <em>Innovations in Information Retrieval: Perspectives for Theory and Practice London</em>. London: Facet Publishing. <a href="https://reserves.library.illinois.edu/" class="uri">https://reserves.library.illinois.edu/</a>.</p>
@@ -388,7 +403,7 @@ Phone: (217) 333-3804</p>
 <p>Connaway, Lynn Silipigni, and Ronald R. Powell. 2010a. <em>Basic Research Methods for Librarians</em>. Vol. 5th ed. Library and Information Science Text Series. Santa Barbara, Calif: ABC-CLIO. <a href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=nlebk&amp;AN=348676&amp;site=ehost-live" class="uri">http://search.ebscohost.com/login.aspx?direct=true&amp;db=nlebk&amp;AN=348676&amp;site=ehost-live</a>.</p>
 </div>
 <div id="ref-connaway_selecting_2010">
-<p>———. 2010b. “Selecting the Research Method.” In <em>Basic Research Methods for Librarians</em>, 71–106. Library and Information Science Text Series. Santa Barbara, Calif: Libraries Unlimited. <a href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=nlebk&amp;AN=348676&amp;site=ehost-live" class="uri">http://search.ebscohost.com/login.aspx?direct=true&amp;db=nlebk&amp;AN=348676&amp;site=ehost-live</a>.</p>
+<p>———. 2010b. “Selecting the Research Method.” In <em>Basic Research Methods for Librarians</em>, 71–106. Library and Information Science Text Series. Santa Barbara, Calif: Libraries Unlimited.</p>
 </div>
 <div id="ref-connaway_if_2011">
 <p>Connaway, Lynn, Timothy Dickey, and Marie Radford. 2011. “‘’If It Is Too Inconvenient I’m Not Going After It:’ Convenience as a Critical Factor in Information-Seeking Behaviors’.” <em>Library &amp; Information Science Research</em> 33 (3): 179–90. doi:<a href="https://doi.org/http://dx.doi.org/10.1016/j.lisr.2010.12.002">http://dx.doi.org/10.1016/j.lisr.2010.12.002</a>.</p>
@@ -415,7 +430,7 @@ Phone: (217) 333-3804</p>
 <p>Fister, Barbara. 2009. “The Dewey Dilemma.” <em>Library Journal</em> 134 (16): 22–25. <a href="http://eric.ed.gov/?id=EJ859403" class="uri">http://eric.ed.gov/?id=EJ859403</a>.</p>
 </div>
 <div id="ref-foss_childrens_2012">
-<p>Foss, Elizabeth, Allison Druin, Robin Brewer, Phillip Lo, Luis Sanchez, Evan Golub, and Hilary Hutchinson. 2012. “Children’s Search Roles at Home: Implications for Designers, Researchers, Educators, and Parents.” <em>Journal of the American Society for Information Science and Technology</em> 63 (3): 558–73. doi:<a href="https://doi.org/10.1002/asi.21700">10.1002/asi.21700</a>.</p>
+<p>Foss, Elizabeth, Allison Druin, Robin Brewer, Phillip Lo, Luis Sanchez, Evan Golub, and Hilary Hutchinson. 2012. “Children’s Search Roles at Home: Implications for Designers, Researchers, Educators, and Parents.” <em>Journal of the American Society for Information Science and Technology</em> 63 (3): 558–73.</p>
 </div>
 <div id="ref-fuhr_evaluation_2007">
 <p>Fuhr, Norbert, Giannis Tsakonas, Trond Aalberg, Maristella Agosti, Preben Hansen, Sarantos Kapidakis, Claus-Peter Klas, et al. 2007. “Evaluation of Digital Libraries.” <em>International Journal on Digital Libraries</em> 8 (1): 21–38. doi:<a href="https://doi.org/10.1007/s00799-007-0011-z">10.1007/s00799-007-0011-z</a>.</p>
@@ -457,7 +472,7 @@ Phone: (217) 333-3804</p>
 <p>Hyder, Eileen Mary. 2014. “Reading Groups and Social Justice.” In <em>Reading Groups, Libraries and Social Inclusion: Experiences of Blind and Partially Sighted People</em>, 49–63. Farnham, Surrey, England : Burlington, VT: Ashgate Publishing, Ltd.</p>
 </div>
 <div id="ref-johnson_health-related_2014">
-<p>Johnson, J. David. 2014. “Health-Related Information Seeking: Is It Worth It?” <em>Information Processing &amp; Management</em> 50 (5): 708–17. doi:<a href="https://doi.org/10.1016/j.ipm.2014.06.001">10.1016/j.ipm.2014.06.001</a>.</p>
+<p>Johnson, J. David. 2014. “Health-Related Information Seeking: Is It Worth It?” <em>Information Processing &amp; Management</em> 50 (5): 708–17.</p>
 </div>
 <div id="ref-junus_digital_2014">
 <p>Junus, Ranti. 2014. “Digital Collections and Accessibility.” MSU Libraries Blogs. <em>Digital Scholarship Collaborative Sandbox</em>. <a href="http://blogpublic.lib.msu.edu/index.php/dscsandbox/digital-collection-and-accessibility" class="uri">http://blogpublic.lib.msu.edu/index.php/dscsandbox/digital-collection-and-accessibility</a>.</p>
@@ -484,13 +499,13 @@ Phone: (217) 333-3804</p>
 <p>Maxwell, R.L. 2010. “Bibliographic Control. 497-505.” <em>Encyclopedia of Library and Information Sciences,</em> <a href="http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html" class="uri">http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html</a>.</p>
 </div>
 <div id="ref-miksa_information_2009">
-<p>Miksa, Francis. 2009. “Information Organization and the Mysterious Information User.” <em>Libraries &amp; the Cultural Record</em> 44 (3): 343–70. <a href="http://www.jstor.org/stable/25549558" class="uri">http://www.jstor.org/stable/25549558</a>.</p>
+<p>Miksa, Francis. 2009. “Information Organization and the Mysterious Information User.” <em>Libraries &amp; the Cultural Record</em> 44 (3): 343–70.</p>
 </div>
 <div id="ref-mitchell_dewey_2009">
 <p>Mitchell, Joan S., and Diane Vizine-Goetz. 2009. “Dewey Decimal Classification (DDC).” In <em>Encyclopedia of Library and Information Sciences, Third Edition</em>, 1507–17. Taylor &amp; Francis. <a href="http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043240" class="uri">http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043240</a>.</p>
 </div>
 <div id="ref-naumer_information_2009">
-<p>Naumer, Charles M., and Karen E. Fisher. 2009. “Information Needs.” In <em>Encyclopedia of Library and Information Sciences, Third Edition</em>, null:2452–8. null. Taylor &amp; Francis. <a href="http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043243" class="uri">http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043243</a>.</p>
+<p>Naumer, Charles M., and Karen E. Fisher. 2009. “Information Needs.” In <em>Encyclopedia of Library and Information Sciences, Third Edition</em>, null:2452–8. null. Taylor &amp; Francis.</p>
 </div>
 <div id="ref-nitecki_changing_1996">
 <p>Nitecki, Danuta A. 1996. “Changing the Concept and Measure of Service Quality in Academic Libraries.” <em>The Journal of Academic Librarianship</em> 22 (3): 181–90. doi:<a href="https://doi.org/10.1016/S0099-1333(96)90056-7">10.1016/S0099-1333(96)90056-7</a>.</p>
@@ -538,7 +553,7 @@ Phone: (217) 333-3804</p>
 <p>Whitmire, Ethelene. 1999. “Racial Differences in the Academic Library Experiences of Undergraduates.” <em>The Journal of Academic Librarianship</em> 25 (1): 33–37. doi:<a href="https://doi.org/10.1016/S0099-1333(99)80173-6">10.1016/S0099-1333(99)80173-6</a>.</p>
 </div>
 <div id="ref-wilson_information_2008">
-<p>Wilson, Tom. 2008. “The Information User: Past, Present and Future.” <em>Journal of Information Science</em> 34 (4): 457–64. doi:<a href="https://doi.org/10.1177/0165551508091309">10.1177/0165551508091309</a>.</p>
+<p>Wilson, Tom. 2008. “The Information User: Past, Present and Future.” <em>Journal of Information Science</em> 34 (4): 457–64.</p>
 </div>
 <div id="ref-wright_cataloging_2014">
 <p>Wright, Alex. 2014a. <em>Cataloging the World: Paul Otlet and the Birth of the Information Age</em>. Oxford: Oxford University Press.</p>
