--- a/SecCFall16.html
+++ b/SecCFall16.html
@@ -13,7 +13,7 @@
 <div id="header">
 <h1 class="title">Information Organization and Access</h1>
 <h2 class="author">University of Illinois School of Information Sciences</h2>
-<h3 class="date">Tue, Aug 23, 2016 8:46:12 AM</h3>
+<h3 class="date">Tue, Aug 23, 2016 9:40:27 AM</h3>
 </div>
 <p>LIS 501C<br />
 Fall 2016<br />
@@ -81,6 +81,41 @@ Phone: (217) 333-3804</p>
 <p>As the state's premier public university, the University of Illinois at Urbana-Champaign's core mission is to serve the interests of the diverse people of the state of Illinois and beyond. The institution thus values inclusion and a pluralistic learning and research environment, one which we respect the varied perspectives and lived experiences of a diverse community and global workforce. We support diversity of worldviews, histories, and cultural knowledge across a range of social groups including race, ethnicity, gender identity, sexual orientation, abilities, economic class, religion, and their intersections.</p>
 <h1 id="accessibility-statement">Accessibility Statement</h1>
 <p>To obtain accessibility-related academic adjustments and/or auxiliary aids, students with disabilities must contact the course instructor and the Disability Resources and Educational Services (DRES) as soon as possible. To contact DRES you may visit 1207 S. Oak St., Champaign, call (217) 333-4603 (V/TTY), or e-mail a message to disability@uiuc.edu.</p>
+<h1 id="assignments-and-evaluation">Assignments and Evaluation</h1>
+<p>All assignments are required for all students. Completing all assignments is not a guarantee of a passing grade. All work must be completed in order to pass this class. Late or incomplete assignments will not be given full credit unless the student has contacted the instructor prior to the due date of the assignment (or in the case of emergencies, as soon as practicable). There will be three main assignments, and ten labs. The weighting of each assignment in the final grade is noted below.</p>
+<p><strong>Assignments, Exercises &amp; Grade Distribution:</strong></p>
+<ul>
+<li>Assignment 1: Information Needs/Information Seeking Behavior. Due September 2 (20%).</li>
+<li>Assignment 2: Digital Collections Assessment. Due September 30 (20%).</li>
+<li>Assignment 3: Final Project. Due October 28 (40%).</li>
+<li>10 Labs for Attendance and Completion/Class Participation (20%)</li>
+</ul>
+<p><strong>Labs:</strong></p>
+<ol style="list-style-type: decimal">
+<li>Library resources (August 26)</li>
+<li>ITD on computing resources (September 2)</li>
+<li>Research methods exercise (September 9)</li>
+<li>Pandoc encoding and transformation (September 16)</li>
+<li>Cultural heritage object description (September 23)</li>
+<li>Zotero bibliography and formatting (September 30)</li>
+<li>Generating Resource Description Framework (RDF) output from Zotero: Bibliographic Ontology (bibo) and Dublin Core (dc) (October 7)</li>
+<li>Collection stewardship exercise (October 14)</li>
+<li>In-class time to work on your research design proposal (October 21)</li>
+<li>Presentations of research design proposals (October 28)</li>
+</ol>
+<p><strong>Grading Scale:</strong></p>
+<p>94-100 = A<br />
+90-93 = A-<br />
+87-89 = B+<br />
+83-86 = B<br />
+80-82 = B-<br />
+77-79 = C+<br />
+73-76 = C<br />
+70-72 = C-<br />
+67-69 = D+<br />
+63-66 = D<br />
+60-62 = D-<br />
+59 and below = F</p>
 <h1 id="topic-schedule">Topic Schedule</h1>
 <h2 id="general-background-resources-for-the-semester">General Background Resources for the Semester</h2>
 <div class="csl-bib-body" style="line-height: 1.35; padding-left: 2em; text-indent:-2em;">
@@ -183,7 +218,7 @@ Phone: (217) 333-3804</p>
 <h3 id="further-background-5">Further Background</h3>
 <div class="csl-bib-body" style="line-height: 1.35; padding-left: 2em; text-indent:-2em;">
 <p>Glushko, Robert J. “Activities in Organizing Systems.” In <em>The Discipline of Organizing</em>, 3rd ed., 97–168. O’Reilly, 2015. http://disciplineoforganizing.org/.</p>
-<p>Junus, Ranti. “Digital Collections and Accessibility.” MSU Libraries Blogs. <em>Digital Scholarship Collaborative Sandbox</em>, November 11–14, 2014. https://web.archive.org/web/20150411015004/http://blogpublic.lib.msu.edu/index.php/dscsandbox/digital-collection-and-accessibility.</p>
+<p>Junus, Ranti. “Digital Collections and Accessibility.” MSU Libraries Blogs. <em>Digital Scholarship Collaborative Sandbox</em>, November 11–14, 2014. https://blogpublic.lib.msu.edu/dsc-sandbox/2014/nov/digital-collections-and-accessibility/.</p>
 <p>Lee, Hur-Li. “What Is a Collection?” <em>Journal of the American Society for Information Science</em> 51, no. 12 (2000): 1106–13. [Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az].</p>
 </div>
 <h2 id="week-7-october-4-preservation">Week 7, October 4: Preservation</h2>
@@ -248,41 +283,6 @@ Phone: (217) 333-3804</p>
 <p>Mitchell, Joan S., and Diane Vizine-Goetz. “Dewey Decimal Classification (DDC).” <em>Encyclopedia of Library and Information Sciences</em>. CRC Press, December 9, 2009. [Locate full text from http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].</p>
 <p>Weinberg, Bella Hass. “Indexing: History and Theory.” <em>Encyclopedia of Library and Information Sciences</em>. CRC Press, December 9, 2009. [Locate full text from http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].</p>
 </div>
-<h1 id="assignments-and-evaluation">Assignments and Evaluation</h1>
-<p>All assignments are required for all students. Completing all assignments is not a guarantee of a passing grade. All work must be completed in order to pass this class. Late or incomplete assignments will not be given full credit unless the student has contacted the instructor prior to the due date of the assignment (or in the case of emergencies, as soon as practicable). There will be three main assignments, and ten labs. The weighting of each assignment in the final grade is noted below.</p>
-<p><strong>Assignments, Exercises &amp; Grade Distribution:</strong></p>
-<ul>
-<li>Assignment 1: Information Needs/Information Seeking Behavior. Due September 2 (20%).</li>
-<li>Assignment 2: Digital Collections Assessment. Due September 30 (20%).</li>
-<li>Assignment 3: Final Project. Due October 28 (40%).</li>
-<li>10 Labs for Attendance and Completion/Class Participation (20%)</li>
-</ul>
-<p><strong>Labs:</strong></p>
-<ol style="list-style-type: decimal">
-<li>Library resources (August 26)</li>
-<li>ITD on computing resources (September 2)</li>
-<li>Research methods exercise (September 9)</li>
-<li>Pandoc encoding and transformation (September 16)</li>
-<li>Cultural heritage object description (September 23)</li>
-<li>Zotero bibliography and formatting (September 30)</li>
-<li>Generating Resource Description Framework (RDF) output from Zotero: Bibliographic Ontology (bibo) and Dublin Core (dc) (October 7)</li>
-<li>Collection stewardship exercise (October 14)</li>
-<li>In-class time to work on your research design proposal (October 21)</li>
-<li>Presentations of research design proposals (October 28)</li>
-</ol>
-<p><strong>Grading Scale:</strong></p>
-<p>94-100 = A<br />
-90-93 = A-<br />
-87-89 = B+<br />
-83-86 = B<br />
-80-82 = B-<br />
-77-79 = C+<br />
-73-76 = C<br />
-70-72 = C-<br />
-67-69 = D+<br />
-63-66 = D<br />
-60-62 = D-<br />
-59 and below = F</p>
 <h1 id="Asgt1" class="task">Assignment 1 Information Needs/Information Seeking Behavior</h1>
 <p>Due September 2 (20 points).</p>
 <h2 id="rationale" class="context">Rationale</h2>
@@ -421,15 +421,15 @@ Phone: (217) 333-3804</p>
 </ol>
 <h2 id="final-deliverables" class="result">Final Deliverables</h2>
 <ol style="list-style-type: decimal">
-<li>Due October 28 Two page extended abstract
+<li><strong>Due October 28 Two page extended abstract</strong>
 <ul>
 <li>Develop the two paragraph summary of your research question into a two page extended abstract. Focus on describing and justifying the methods for investigating your research question. The extended abstract is a proposal. It should include a statement of your research problem, a description of research methods for investigating the problem, and an explanation of what form the results of the investigation will take.</li>
 </ul></li>
-<li>Due October 28 Annotated bibliography of 20 items
+<li>** Due October 28 Annotated bibliography of 20 items**
 <ul>
 <li>Following the Purdue Writing Lab Guidelines, create a document that integrates annotations with formatted entries. For each resource, write an annotation that situates the work presented with respect to your research question. Overall, the annotated bibliography should connect your problem to what is already known. It should have a meaningful order (which might be alphabetical, chronological, or something else). The resource list previously submitted may need to be modified, either removing or adding items as necessary to cover as many aspects of the problem, and the knowledge gap, as feasible. Your annotations should draw your reader's attention to the connections between the resource and your problem, and to other resources in the bibliography.</li>
 </ul></li>
-<li>Due October 28 Five minute oral presentation
+<li><strong>Due October 28 Five minute oral presentation</strong>
 <ul>
 <li>Use this presentation to efficiently summarize the relevance of this problem to people and organizations who have a stake in resolving the knowledge gap that you have identified. Do explain the general approach to investigating the question, but save methodological details for the extended abstract. Five minute summaries are difficult, so practice your presentation with a classmate or colleague outside class.</li>
 </ul></li>
